// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить вопрос с несколькими вариантами ответа 1`] = `
<div
  className="AutoGuruQuestion"
>
  <div
    className="AutoGuruQuestion__title"
  >
    Вопрос
  </div>
  <AutoGuruQuestionAnswersCheckbox
    answers={Array []}
  />
</div>
`;

exports[`должен отрендерить вопрос с одним вариантом ответа 1`] = `
<div
  className="AutoGuruQuestion"
>
  <div
    className="AutoGuruQuestion__title"
  >
    Вопрос
  </div>
  <AutoGuruQuestionAnswersRadio
    answers={Array []}
  />
</div>
`;

exports[`должен отрендерить вопрос с пользовательским вводом 1`] = `
<div
  className="AutoGuruQuestion"
>
  <div
    className="AutoGuruQuestion__title"
  >
    Вопрос
  </div>
  <AutoGuruQuestionAnswersInput
    answers={Array []}
    renderPresets={[Function]}
  />
</div>
`;
